--- a/generalStyle.css
+++ b/generalStyle.css
@@ -58,20 +58,14 @@ nav {
     color: navy;
 }
 
-header {
-    width: 720px;
-    height: 300px;
-    margin: auto;
-}
-
 .activeNavButton {
     background-color: #fafafa;
     color: navy;
 }
 
-.coolPic {
-    border-radius: 50%;
-    margin: 30px 0 10px 0;
+main {
+    width: 720px;
+    margin: auto;
 }
 
 h2 {
@@ -79,13 +73,11 @@ h2 {
 }
 
 h2::before {
-    content: "!!";
-    color: #999;
-    margin: 0 5px 0 0;
+    content: "#";
+    color: navy;
+    margin: 0 10px 0 0;
 }
 
-h3::before {
-    content: "!";
-    color: #999;
-    margin: 0 5px 0 0;
+p {
+    margin-bottom: 8px;
 }
