--- a/generalStyle.css
+++ b/generalStyle.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-    font-family: "Work Sans Black";
+    font-family: "Work Sans Medium";
     src: url(fonts/WorkSans/WorkSans-Medium.ttf);
 }
 
@@ -16,10 +16,12 @@
 
 *:visited {
     color: #000;
+    color: #fafafa;
 }
 
 *:link {
     color: #000;
+    color: #fafafa;
 }
 
 .clear {
@@ -28,15 +30,15 @@
 
 body {
     background-color: #fafafa;
+    color: #000;
     font-family: "Work Sans";
 }
 
 nav {
     padding: 5px 30px;
     font-size: 16px;
-    font-family: "Work Sans Black";
-    background-color: #fff;
-    border-bottom: 1px #999 solid;
+    font-family: "Work Sans Medium";
+    background-color: #fafafa;
 }
 
 .menuOptions {
@@ -48,19 +50,18 @@ nav {
     float: left;
     width: 85px;
     padding: 6px 0px;
-    border-radius: 5px;
     margin: 5px 5px;
     text-align: center;
+    color: #4a4952;
 }
 
 .navButton:hover {
-    background-color: #f5f5f5;
-    color: navy;
+    border-bottom: 2px solid;
 }
 
 .activeNavButton {
-    background-color: #fafafa;
-    color: navy;
+    color: #310069;
+    border-bottom: #310069 2px solid;
 }
 
 main {
@@ -68,14 +69,8 @@ main {
     margin: auto;
 }
 
-h2 {
+h1 {
     padding: 40px 0 20px 0;
-}
-
-h2::before {
-    content: "#";
-    color: navy;
-    margin: 0 10px 0 0;
 }
 
 p {
