--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,19 @@
-.coolPic {
-    border-radius: 50%;
-    margin: 30px 0 10px 0;
+article h1 {
+    padding: 0px 0 10px 0;
+}
+
+article p {
+    margin-bottom: 0;
+}
+
+.post-link {
+    padding: 5px 15px;
+    border-radius: 8px;
+    background-color: #fff;
+    border: 1px solid #0005;
+}
+
+.date {
+    color: #0009;
+    font-size: 14px;
 }
