--- a/css/home.css
+++ b/css/home.css
@@ -6,14 +6,27 @@ article p {
     margin-bottom: 0;
 }
 
+.emoji-div{
+    display: inline-block;
+    width: 30px;
+    margin-right: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
 .post-link {
-    padding: 5px 15px;
+    margin: 25px auto;
+    padding: 10px 20px;
     border-radius: 8px;
     background-color: #fff;
     border: 1px solid #0005;
 }
 
-.date {
+.post-date {
     color: #0009;
     font-size: 14px;
+}
+
+.post-title {
+    padding: 0;
 }
