--- a/generalStyle.css
+++ b/generalStyle.css
@@ -4,6 +4,7 @@
     border: 0px;
 }
 
+
 .clear {
     clear: both;
 }
@@ -14,9 +15,13 @@ body {
 }
 
 nav {
-    padding: 5px 30px;
-    font-size: 16px;
-    background-color: red;
+    padding: 10px 30px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+nav a:visited {
+    color: #000;
 }
 
 .menuOptions {
@@ -26,19 +31,23 @@ nav {
 
 .navButton {
     float: left;
-    width: 85px;
-    padding: 3px 0px;
-    margin: 3px 5px;
+    width: 70px;
+    height: 22px;
+    padding: 5px 0 3px 0;
+    margin: 0px 7px;
     text-align: center;
+    border-bottom: 2px solid #0000;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
 }
 
 .navButton:hover {
-    border-bottom: 2px solid;
+    border-bottom: 2px solid #000F;
 }
 
 .activeNavButton {
-    border-bottom: 2px solid;
-    font-weight: 400;
+    border-bottom: 2px solid #000F;
+    background-color: #0001;
 }
 
 main {
@@ -52,5 +61,5 @@ h1 {
 }
 
 p {
-    margin-bottom: 8px;
+    /* font-size: 14px */
 }
